--- a/Perrruna Pagina/registrar/registrar.html
+++ b/Perrruna Pagina/registrar/registrar.html
@@ -56,7 +56,7 @@
     <header id="header">
         <div class="wrap">
           <div id="logo" style="text-align: center;">
-            <a href="../inicio/pagina.html"><img src="../fotos/perro.png" width="52" height="52" style="margin: 0 auto;"></a>
+            <a href="../index.html"><img src="../fotos/perro.png" width="52" height="52" style="margin: 0 auto;"></a>
           </div>
           <nav id="menu">
             <ul>
