--- a/Perrruna Pagina/servicios/servicios.html
+++ b/Perrruna Pagina/servicios/servicios.html
@@ -44,7 +44,7 @@
     <header id="header">
         <div class="wrap">
           <div id="logo" style="text-align: center;">
-            <a href="../inicio/pagina.html"><img src="../fotos/perro.png" width="52" height="52" style="margin: 0 auto;"></a>
+            <a href="../index.html"><img src="../fotos/perro.png" width="52" height="52" style="margin: 0 auto;"></a>
           </div>
           <nav id="menu">
             <ul>
@@ -54,7 +54,7 @@
                       <span class="slider"></span>
                     </label>
                   </li>
-              <li><a href="../inicio/pagina.html">Inicio</a></li>
+              <li><a href="../index.html">Inicio</a></li>
               <li><a href="../cuidadores/cuidadores.html">Cuidadores</a></li>
               <li><a href="../servicios/servicios.html">Servicios</a></li>
               <li><a href="../ubicacion/mapa.html">Ubicacion</a></li>
