Subiendo ultima actualizacion Mi-Mascota Perruna

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <link rel="stylesheet" href="pagina.css" />
-  <title>Menu y Contenido</title>
+  <title>Mi-Mascota Perruna</title>
+  <link rel="icon" href="fotos/perro2.png" type="image/x-icon">
+
   <!--Facebook pixel-->
 <script>
   !function(f,b,e,v,n,t,s)
